--- a/src/components/form_popup/form_popup.css
+++ b/src/components/form_popup/form_popup.css
@@ -70,7 +70,7 @@
   background-size: cover;
 }
 
-.signup .form-details {
+.registration .form-details {
   padding: 0 20px;
   background: url("../../../public/images/signup-img.jpg");
   background-position: center;
